[package]
name = "listenet"
version = "0.1.0"
authors = ["janus <emekamicro@gmail.com>"]
description = "Daemon Listener (member of UDP Multicast"
homepage = "https://github.com/janus/listennet"
repository = "https://github.com/janus/listennet"

[lib]
name = "listenet"
path = "src/lib.rs"


[dependencies]
bytes = "0.4.0"
edcert = "*"
base64 = "0.6.0"
mio = "0.6.10"
time = "0.1.38"
derive-error = "0.0.3"
log = "0.3"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

